# karakuri

./: .env.example  .gitignore  CLAUDE.md  MVP_IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  README.ja.md  README.md  RENAME_TO_XOLVIEN.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5e9d946a7c04_initial_migration.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  instructions.py  logs.py  repositories.py  tasks.py  test_runs.py
backend/app/models/: __init__.py  instruction.py  repository.py  task.py  task_log.py  test_case_item.py  test_run.py  user.py
backend/app/schemas/: auth.py  instruction.py  repository.py  task.py  test_run.py
backend/app/services/: claude_service.py  docker_service.py  test_service.py
backend/app/websocket/: __init__.py  manager.py
docker/workspace/: Dockerfile  entrypoint.sh
docs/: basic-design (1).md  changelog.md  getting-started.ja.md  getting-started.md  improvement-backlog.md  requirements (8).md  requirements-revision.md  roadmap.md  spec.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/i18n/: en.ts  index.ts  ja.ts
frontend/src/pages/: Dashboard.tsx  TaskCreate.tsx  TaskDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
